--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "module": "commonjs",
         "target": "es2017",
 		"allowJs": false,
-		"strictNullChecks": true
+		"strictNullChecks": true,
+		"declaration": true
 	},
     "include": [
         "./src/**/*.ts"
