--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "example": "node ./dist/example/index.js"
+    "example": "node ./src/example/index.js"
   },
   "author": "",
   "license": "ISC",
