--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "sourceMap": true,
+        "sourceMap": false,
 		"noImplicitAny": true,
 		"experimentalDecorators": true,
         "module": "commonjs",
