--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sqlite": "^2.9.0"
+    "sqlite": "^2.9.2"
   },
   "devDependencies": {
+    "tslint": "^5.10.0",
     "typescript": "^2.8.1"
   },
   "description": ""
