--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "deep-clone-ts": "^0.1.2",
     "sqlite": "^2.9.2"
   },
   "devDependencies": {
     "tslint": "^5.10.0",
-    "typescript": "^2.8.1"
+    "typescript": "^2.9.2"
   },
   "description": ""
 }
