--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "author": "",
   "license": "ISC",
   "repository": "github:dkirchhof/typesafe-sql",
-  "dependencies": {},
   "devDependencies": {
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.2"
+    "@types/sqlite3": "^3.1.7",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2"
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.2"
   },
-  "peerDependencies": {
-    "sqlite": "^3.0.3"
-  },
-  "description": ""
+  "description": "",
 }
