--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "devDependencies": {
     "@types/sqlite3": "^3.1.7",
     "sqlite": "^4.0.23",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2"
-  },
-  "description": "",
+  }
 }
